# unleash-client-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/docker/: Dockerfile
.github/workflows/: cmake.yml
examples/simple/: CMakeLists.txt  main.c  main.h
include/: types.h  unleash.h
include/utils/: log.h  request.h
src/: unleash.c
src/utils/: log.c  request.c
test/: CMakeLists.txt  test.cc  test.h
test/conformance/: 01-simple-examples.cc
test/unit/: networkingTest.cc
